# ========== DOSYA: sentinel-storage/Cargo.toml ==========
[package]
name = "sentinel-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.34"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures-util = "0.3"
qdrant-client = "1.10" # Bu v1.17'ye çözümlenecektir, kod ona göre hazırlandı
uuid = { version = "1.7", features = ["v4"] }

[build-dependencies]
prost-build = "0.12"