# ========== DOSYA: sentinel-storage/Cargo.toml ==========
[package]
name = "sentinel-storage"
version = "0.3.2"
edition = "2021"

[dependencies]
# HFT Runtime
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.34"
prost = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
futures-util = "0.3"

# Veri Kaydı
qdrant-client = "1.10"
uuid = { version = "1.7", features = ["v4"] }

[build-dependencies]
prost-build = "0.12"